--- a/portage/make.conf
+++ b/portage/make.conf
@@ -1,10 +1,9 @@
 COMMON_FLAGS="-march=znver2 -O2 -pipe"
-CFLAGS="${COMMON_FLAGS}"
+CFLAGS="${COMMON_FLAGS} -I/usr/include/gtk-3.0"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 
-# NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
@@ -13,14 +12,18 @@ LC_MESSAGES=C
 
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
-GRUB_PLATFORMS="efi-64"
 LLVM_TARGETS="AMDGPU X86"
 VIDEO_CARDS="amdgpu radeonsi"
 
+#
+# USE Flags
+#
 # Miscellaneous
-USE_MISC="experimental man symlink -deprecated -readline -duktape -sendmail -telemetry"
-# Init System
-USE_INIT="grub -elogind"
+USE_MISC="experimental man savedconfig symlink -deprecated"
+# Features
+USE_FEAT="-readline -duktape -server -sendmail -telemetry"
+# System
+USE_SYS="gnuefi -elogind"
 # Devices
 USE_DEV="mount -udisks -cryptsetup -dvd -dvdr -cdr -ipod"
 # Text
@@ -28,14 +31,14 @@ USE_TXT="harfbuzz -spell"
 # Audio
 USE_AUDIO="pulseaudio mpd libmpdclient -xv -a52 -cdda -sdl"
 # Graphics
-USE_GRAPHICS="wayland xwayland ffmpeg gles2 opengl -X -vlc"
+USE_GRAPHICS="wayland xwayland ffmpeg gles2 -X -vlc"
 # Network
 USE_NET="wifi -ppp -crda -networkmanager"
 # Desktop Environment
 USE_DE="gtk3 tray vnc -swaybar -kde -plasma -gnome -mate -xfce"
-USE="${USE_MISC} ${USE_INIT} ${USE_DEV} ${USE_TXT} ${USE_AUDIO} ${USE_GRAPHICS} ${USE_NET} ${USE_DE}"
+USE="${USE_MISC} ${USE_FEAT} ${USE_SYS} ${USE_DEV} ${USE_TXT} ${USE_AUDIO} ${USE_GRAPHICS} ${USE_NET} ${USE_DE}"
 
 EMERGE_DEFAULT_OPTS="-a --quiet-build"
 MAKEOPTS="-j8"
 
-GENTOO_MIRRORS="https://mirror.csclub.uwaterloo.ca/gentoo-distfiles/ rsync://mirror.csclub.uwaterloo.ca/gentoo-distfiles"
+GENTOO_MIRRORS="https://mirror.csclub.uwaterloo.ca/gentoo-distfiles rsync://mirror.csclub.uwaterloo.ca/gentoo-distfiles"
