--- a/portage/make.conf
+++ b/portage/make.conf
@@ -1,5 +1,5 @@
 COMMON_FLAGS="-march=znver2 -O2 -pipe"
-CFLAGS="${COMMON_FLAGS} -I/usr/include/gtk-3.0"
+CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
@@ -19,9 +19,9 @@ VIDEO_CARDS="amdgpu radeonsi"
 # USE Flags
 #
 # Miscellaneous
-USE_MISC="experimental man savedconfig symlink -deprecated"
+USE_MISC="experimental savedconfig man -deprecated -telemetry"
 # Features
-USE_FEAT="-readline -duktape -server -sendmail -telemetry"
+USE_FEAT="zsh-completion -readline -duktape -server -sendmail"
 # System
 USE_SYS="gnuefi -elogind"
 # Devices
