--- a/sway/config
+++ b/sway/config
@@ -28,36 +28,21 @@ set $menu "rofi -show run | xargs swaymsg exec --"
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
-output * bg /home/weathercold/Pictures/wallpapers/1.jpg fill
+output eDP-1 bg /home/weathercold/Pictures/wallpapers/1.jpg fill
 xwayland enable
 
 ### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 exec swayidle -w \
-	timeout 600 'swaylock' \
-	timeout 1200 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-	before-sleep 'swaylock'
+     timeout 600 'swaylock' \
+    timeout 1200 'swaymsg "output eDP-1 dpms off"' \
+          resume 'swaymsg "output eDP-1 dpms on"' \
+    before-sleep 'swaylock'
 
 ### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
@@ -72,6 +57,7 @@ input "2:7:SynPS/2_Synaptics_TouchPad" {
 }
 
 ### Style
+font pango:inconsolata 13
 gaps inner 10
 gaps outer 10
 
@@ -80,15 +66,16 @@ gaps outer 10
 # Basics:
 #
     # New terminal / launcher
-    bindsym $mod+Return exec $term
-    bindsym $mod+Alt+Return exec $menu
+    bindsym --no-repeat $mod+Return exec $term
+    bindsym --no-repeat $mod+Alt+Return exec $menu
 
     # Kill focused window / sway
-    bindsym $mod+Escape kill
-    bindsym $mod+Alt+Escape exec swaymsg exit
+    bindsym --no-repeat $mod+Escape kill
+    bindsym --no-repeat $mod+Alt+Escape exec swaymsg exit
 
-    # Lock sway
-    bindsym $mod+Alt+l exec swaylock
+    # Lock sway / toggle display
+    bindsym --no-repeat $mod+Alt+l exec swaylock
+    bindsym --no-repeat $mod+d output eDP-1 dpms toggle
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -98,7 +85,7 @@ gaps outer 10
     floating_modifier $mod normal
 
     # Reload the configuration file
-    bindsym $mod+Alt+r reload
+    bindsym --no-repeat $mod+Alt+r reload
 
 #
 # Moving around:
