--- a/portage/make.conf
+++ b/portage/make.conf
@@ -12,8 +12,10 @@ LC_MESSAGES=C
 
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
+ABI_X86="64"
 LLVM_TARGETS="AMDGPU X86"
 VIDEO_CARDS="amdgpu radeonsi"
+L10N="en"
 
 #
 # USE Flags
@@ -21,21 +23,21 @@ VIDEO_CARDS="amdgpu radeonsi"
 # Miscellaneous
 USE_MISC="experimental savedconfig man -deprecated -telemetry"
 # Features
-USE_FEAT="zsh-completion -readline -duktape -server -sendmail"
+USE_FEAT="zsh-completion -protobuf -readline -duktape -server"
 # System
 USE_SYS="gnuefi -elogind"
 # Devices
-USE_DEV="mount -udisks -cryptsetup -dvd -dvdr -cdr -ipod"
+USE_DEV="-udisks -cryptsetup -cups -ppds -dvd -dvdr -cdr -ipod"
 # Text
 USE_TXT="harfbuzz -spell"
 # Audio
-USE_AUDIO="pulseaudio mpd libmpdclient -xv -a52 -cdda -sdl"
+USE_AUDIO="pulseaudio mpd libmpdclient -a52 -cdda -sdl"
 # Graphics
-USE_GRAPHICS="wayland xwayland ffmpeg gles2 -X -vlc"
+USE_GRAPHICS="wayland xwayland ffmpeg gles2 -X -mng -xv -vlc"
 # Network
 USE_NET="wifi -ppp -crda -networkmanager"
 # Desktop Environment
-USE_DE="gtk3 tray vnc -swaybar -kde -plasma -gnome -mate -xfce"
+USE_DE="gtk3 tray vnc -kde -plasma -gnome -mate -xfce"
 USE="${USE_MISC} ${USE_FEAT} ${USE_SYS} ${USE_DEV} ${USE_TXT} ${USE_AUDIO} ${USE_GRAPHICS} ${USE_NET} ${USE_DE}"
 
 EMERGE_DEFAULT_OPTS="-a --quiet-build"
