--- a/portage/repos.conf/eselect-repo.conf
+++ b/portage/repos.conf/eselect-repo.conf
@@ -14,3 +14,18 @@ sync-uri = https://github.com/gentoo-mirror/guru.git
 location = /var/db/repos/wayland-desktop
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/wayland-desktop.git
+
+[mv]
+location = /var/db/repos/mv
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/mv.git
+
+[lto-overlay]
+location = /var/db/repos/lto-overlay
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/lto-overlay.git
+
+[pf4public]
+location = /var/db/repos/pf4public
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/pf4public.git
