--- a/sway/config
+++ b/sway/config
@@ -16,50 +16,40 @@ set $term alacritty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu "rofi -show run | xargs swaymsg exec --"
+set $menu "rofi -show run"
 
-### Output configuration
+### Configuration
 #
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-# output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+# Basics:
 #
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-output eDP-1 bg /home/weathercold/Pictures/wallpapers/1.jpg fill
-xwayland enable
+    xwayland enable
+    focus_wrapping no
 
-### Idle configuration
 #
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-exec swayidle -w \
-     timeout 600 'swaylock' \
-    timeout 1200 'swaymsg "output eDP-1 dpms off"' \
-          resume 'swaymsg "output eDP-1 dpms on"' \
-    before-sleep 'swaylock'
+# Idle:
+#
+    exec swayidle -w \
+         timeout 600 'swaymsg "output eDP-1 dpms off"' \
+              resume 'swaymsg "output eDP-1 dpms on"' \
+        timeout 1200 'swaylock' \
+        before-sleep 'swaylock'
 
-### Input configuration
 #
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
-input "1:1:AT_Translated_Set_2_keyboard" {
-    repeat_delay 350
-    repeat_rate 30
-    xkb_options caps:swapescape
-}
-input "2:7:SynPS/2_Synaptics_TouchPad" {
-    tap enabled
-    middle_emulation enabled
-}
+# Input:
+#
+    # You can get the names of your inputs by running: swaymsg -t get_inputs
+    # Read `man 5 sway-input` for more information about this section.
+    input "1:1:AT_Translated_Set_2_keyboard" {
+        repeat_delay 350
+        repeat_rate 30
+        xkb_options caps:swapescape
+    }
+    input "2:7:SynPS/2_Synaptics_TouchPad" {
+        tap enabled
+    }
 
 ### Style
-font pango:inconsolata 13
-gaps inner 10
-gaps outer 10
+include ayu-light
 
 ### Key bindings
 #
@@ -144,12 +134,6 @@ gaps outer 10
 #
 # Layout stuff:
 #
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
-
     # Switch the current container between different layout styles
     bindsym $mod+s layout stacking
     bindsym $mod+t layout tabbed
@@ -217,12 +201,12 @@ gaps outer 10
 #
 # Shortcuts:
 #
-    # Light
-    #bindsym KEY_BRIGHTNESSUP exec light -A 5
-    #bindsym KEY_BRIGHTNESSDOWN exec light -U 5
+    bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+    bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -2%
+    bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +2%
+    #bindsym XF86AudioPlay exec ?
 
-    # Volume
-    #bindsym KEY_VOLUMEUP exec pactl set-sink-volume @DEFAULT_SINK@ +2%
-    #bindsym KEY_VOLUMEDOWN exec pactl set-sink-volume @DEFAULT_SINK@ -2%
+    bindsym XF86MonBrightnessDown exec light -U 5
+    bindsym XF86MonBrightnessUp exec light -A 5
 
 include /etc/sway/config.d/*
