--- a/portage/make.conf
+++ b/portage/make.conf
@@ -35,7 +35,7 @@ USE_AUDIO="pulseaudio mpd libmpdclient -a52 -cdda -sdl"
 # Graphics
 USE_GRAPHICS="wayland xwayland ffmpeg gles2 -X -mng -xv -vlc"
 # Network
-USE_NET="wifi -ppp -crda -networkmanager"
+USE_NET="network wifi -ppp -crda -networkmanager"
 # Desktop Environment
 USE_DE="gtk3 tray vnc -kde -plasma -gnome -mate -xfce"
 USE="${USE_MISC} ${USE_FEAT} ${USE_SYS} ${USE_DEV} ${USE_TXT} ${USE_AUDIO} ${USE_GRAPHICS} ${USE_NET} ${USE_DE}"
