--- a/waybar/config
+++ b/waybar/config
@@ -2,22 +2,17 @@
     "layer": "top",
     "position": "top",
     "height": 30,
-    "spacing": 6, // Gaps between modules (4px)
+    "margin": "15 15 0 15",
 
     "mode": "dock",
     "ipc": true,
 
-    "modules-left": ["sway/mode", "sway/workspaces", "custom/media"],
-    "modules-center": ["sway/window"],
-    "modules-right": ["mpd", "idle_inhibitor", "pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "keyboard-state", "battery", "clock", "tray"],
+    "modules-left": ["clock", "idle_inhibitor", "keyboard-state", "mpd", "tray"],
+    "modules-center": ["sway/workspaces", "sway/mode"],
+    "modules-right": ["pulseaudio", "backlight", "temperature", "network", "cpu", "memory", "battery"],
 
-    // Modules configuration
-    "sway/mode": {
-        "min-length": 7
-    },
     "sway/workspaces": {
         "disable-scroll-wraparound": true,
-        "enable-bar-scroll": true,
 
         //"format": "{name}: {icon}",
         //"format-icons": {
@@ -42,6 +37,9 @@
             "9": [],
             "10": []
         }
+    },
+    "sway/mode": {
+        "format": "{}"
     },
     "keyboard-state": {
         "numlock": true,
@@ -96,16 +94,14 @@
     },
     "cpu": {
         "format": "{usage}% ",
-        "tooltip": false
     },
     "memory": {
         "format": "{}% "
     },
     "temperature": {
         // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
+        "hwmon-path": "/sys/class/hwmon/hwmon6/temp1_input",
+        "critical-threshold": 60,
         "format": "{temperatureC}°C {icon}",
         "format-icons": ["", "", ""]
     },
@@ -115,29 +111,26 @@
     },
     "battery": {
         "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
+            "good": 95,
+            "warning": 60,
+            "critical": 30
         },
         "format": "{capacity}% {icon}",
         "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
         "format-icons": ["", "", "", "", ""]
     },
     "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "interface": "wlp1s0",
         "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
+        "format-ethernet": "",
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
         "format": "{volume}% {icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
@@ -153,19 +146,6 @@
             "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "pavucontrol"
-    },
-    "custom/media": {
-        "format": "{icon} {}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+        //"on-click": "pavucontrol"
     }
 }
-
