--- a/portage/repos.conf/eselect-repo.conf
+++ b/portage/repos.conf/eselect-repo.conf
@@ -29,3 +29,13 @@ sync-uri = https://github.com/gentoo-mirror/lto-overlay.git
 location = /var/db/repos/pf4public
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/pf4public.git
+
+[nest]
+location = /var/db/repos/nest
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/nest.git
+
+[gentoo]
+location = /var/db/repos/gentoo
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/gentoo.git
