--- a/portage/make.conf
+++ b/portage/make.conf
@@ -21,7 +21,7 @@ L10N="en"
 # USE Flags
 #
 # Miscellaneous
-USE_MISC="experimental savedconfig man -deprecated -telemetry"
+USE_MISC="experimental lto savedconfig man -deprecated -telemetry"
 # Features
 USE_FEAT="zsh-completion -protobuf -readline -duktape -server"
 # System
@@ -40,7 +40,7 @@ USE_NET="network wifi -ppp -crda -networkmanager"
 USE_DE="gtk3 tray vnc -kde -plasma -gnome -mate -xfce"
 USE="${USE_MISC} ${USE_FEAT} ${USE_SYS} ${USE_DEV} ${USE_TXT} ${USE_AUDIO} ${USE_GRAPHICS} ${USE_NET} ${USE_DE}"
 
-EMERGE_DEFAULT_OPTS="-a --quiet-build"
+EMERGE_DEFAULT_OPTS="-a --autounmask=n"
 MAKEOPTS="-j8"
 
 GENTOO_MIRRORS="https://mirror.csclub.uwaterloo.ca/gentoo-distfiles rsync://mirror.csclub.uwaterloo.ca/gentoo-distfiles"
