--- a/portage/repos.conf/eselect-repo.conf
+++ b/portage/repos.conf/eselect-repo.conf
@@ -34,3 +34,8 @@ sync-uri = https://github.com/gentoo-mirror/pf4public.git
 location = /var/db/repos/nest
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/nest.git
+
+[torbrowser]
+location = /var/db/repos/torbrowser
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/torbrowser.git
