--- a/waybar/config
+++ b/waybar/config
@@ -160,9 +160,8 @@
 
     "layer": "top",
     "position": "bottom",
-    "height": 30,
-    "width": 100,
-    "margin": "0 15 15 15",
+    "height": 60,
+    "margin-bottom": 30,
 
     "mode": "overlay",
     "ipc": true,
