--- a/portage/make.conf
+++ b/portage/make.conf
@@ -1,3 +1,6 @@
+FEATURES="candy clean-logs"
+CLEAN_DELAY="0"
+
 COMMON_FLAGS="-march=znver2 -O2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
@@ -5,6 +8,8 @@ FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 
 PORTDIR="/var/db/repos/gentoo"
+PORTAGE_LOGDIR="/var/log/portage"
+EMERGE_LOG_DIR="/var/log/portage"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
 
@@ -23,7 +28,7 @@ L10N="en"
 # Miscellaneous
 USE_MISC="experimental lto savedconfig man -deprecated -telemetry"
 # Features
-USE_FEAT="zsh-completion -protobuf -readline -duktape -server"
+USE_FEAT="fish-completion -printsupport -protobuf -readline -server"
 # System
 USE_SYS="gnuefi -elogind"
 # Devices
@@ -33,14 +38,14 @@ USE_TXT="harfbuzz -spell"
 # Audio
 USE_AUDIO="pulseaudio mpd libmpdclient -a52 -cdda -sdl"
 # Graphics
-USE_GRAPHICS="wayland xwayland ffmpeg gles2 -X -mng -xv -vlc"
+USE_GRAPHICS="wayland xwayland gles2 -X -mng -xv"
+# Media
+USE_MEDIA="pipewire screencast ffmpeg -vlc"
 # Network
 USE_NET="network wifi -ppp -crda -networkmanager"
 # Desktop Environment
 USE_DE="gtk3 tray vnc -kde -plasma -gnome -mate -xfce"
-USE="${USE_MISC} ${USE_FEAT} ${USE_SYS} ${USE_DEV} ${USE_TXT} ${USE_AUDIO} ${USE_GRAPHICS} ${USE_NET} ${USE_DE}"
+USE="${USE_MISC} ${USE_FEAT} ${USE_SYS} ${USE_DEV} ${USE_TXT} ${USE_AUDIO} ${USE_GRAPHICS} ${USE_MEDIA} ${USE_NET} ${USE_DE}"
 
-EMERGE_DEFAULT_OPTS="-a --autounmask=n"
+EMERGE_DEFAULT_OPTS="-a --keep-going --unordered-display --autounmask=n --quiet-build"
 MAKEOPTS="-j8"
-
-GENTOO_MIRRORS="https://mirror.csclub.uwaterloo.ca/gentoo-distfiles rsync://mirror.csclub.uwaterloo.ca/gentoo-distfiles"
