--- a/portage/make.conf
+++ b/portage/make.conf
@@ -19,6 +19,7 @@ ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
 ABI_X86="64"
 LLVM_TARGETS="AMDGPU X86"
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3"
 VIDEO_CARDS="amdgpu radeonsi"
 L10N="en"
 
