--- a/sway/config
+++ b/sway/config
@@ -7,11 +7,13 @@
 #
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
+
 # Home row direction keys, like vim
 set $left h
 set $down j
 set $up k
 set $right l
+
 # Your preferred applications
 set $menu rofi -show run
 set $term alacritty
@@ -68,128 +70,140 @@ exec "systemctl --user import-environment; systemctl --user start sway-session.t
 floating_modifier $mod normal
 
 ### Default mode ###
-## Basics ##
-# Kill focused window / sway
-bindsym --no-repeat $mod+Escape kill
-bindsym --no-repeat $mod+Alt+Escape exec "systemctl --user stop sway-session.target; swaymsg exit"
+bindsym {
+    ## Basics ##
+    --no-repeat {
+        # Kill focused window / sway
+        $mod+Escape kill
+        --locked $mod+Alt+Escape exec "systemctl --user stop sway-session.target; swaymsg exit"
 
-# Lock sway / toggle display
-bindsym --no-repeat $mod+Alt+l exec swaylock
-bindsym --no-repeat $mod+d output eDP-1 dpms toggle
+        # Lock sway / toggle display
+        $mod+Alt+l exec swaylock
+        --locked $mod+d output eDP-1 dpms toggle
 
-# Reload the configuration file
-bindsym --no-repeat $mod+Alt+r reload
+        # Reload the configuration file
+        $mod+Alt+r reload
+    }
 
-## Moving around ##
-# Move your focus around
-bindsym $mod+$left focus left
-bindsym $mod+$down focus down
-bindsym $mod+$up focus up
-bindsym $mod+$right focus right
+    ## Moving around ##
+    # Move your focus around
+    $mod+$left focus left
+    $mod+$down focus down
+    $mod+$up focus up
+    $mod+$right focus right
 
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+    $mod+Left focus left
+    $mod+Down focus down
+    $mod+Up focus up
+    $mod+Right focus right
 
-# Move the focused window with the same, but add Shift
-bindsym $mod+Shift+$left move left
-bindsym $mod+Shift+$down move down
-bindsym $mod+Shift+$up move up
-bindsym $mod+Shift+$right move up
+    # Move the focused window with the same, but add Shift
+    $mod+Shift+$left move left
+    $mod+Shift+$down move down
+    $mod+Shift+$up move up
+    $mod+Shift+$right move up
 
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+    $mod+Shift+Left move left
+    $mod+Shift+Down move down
+    $mod+Shift+Up move up
+    $mod+Shift+Right move right
 
-## Workspaces ##
-# Switch to workspace
-bindsym --no-repeat $mod+1 workspace number 1
-bindsym --no-repeat $mod+2 workspace number 2
-bindsym --no-repeat $mod+3 workspace number 3
-bindsym --no-repeat $mod+4 workspace number 4
-bindsym --no-repeat $mod+5 workspace number 5
-bindsym --no-repeat $mod+6 workspace number 6
-bindsym --no-repeat $mod+7 workspace number 7
-bindsym --no-repeat $mod+8 workspace number 8
-bindsym --no-repeat $mod+9 workspace number 9
-bindsym --no-repeat $mod+0 workspace number 10
+    ## Workspaces ##
+    --no-repeat {
+        # Switch to workspace
+        $mod+1 workspace number 1
+        $mod+2 workspace number 2
+        $mod+3 workspace number 3
+        $mod+4 workspace number 4
+        $mod+5 workspace number 5
+        $mod+6 workspace number 6
+        $mod+7 workspace number 7
+        $mod+8 workspace number 8
+        $mod+9 workspace number 9
+        $mod+0 workspace number 10
 
-bindsym $mod+minus exec \
-    WS=$(swaymsg -t get_workspaces -p | grep -oP "\d* \(focused\)" | grep -oP "\d*") && \
-    swaymsg -p workspace number $((WS <= 1 ? 1 : WS-1))
-bindsym $mod+equal exec \
-    WS=$(swaymsg -t get_workspaces -p | grep -oP "\d* \(focused\)" | grep -oP "\d*") && \
-    swaymsg -p workspace number $((WS >= 10 ? 10 : WS+1))
+        # Move focused container to workspace
+        $mod+Shift+1 move container to workspace number 1
+        $mod+Shift+2 move container to workspace number 2
+        $mod+Shift+3 move container to workspace number 3
+        $mod+Shift+4 move container to workspace number 4
+        $mod+Shift+5 move container to workspace number 5
+        $mod+Shift+6 move container to workspace number 6
+        $mod+Shift+7 move container to workspace number 7
+        $mod+Shift+8 move container to workspace number 8
+        $mod+Shift+9 move container to workspace number 9
+        $mod+Shift+0 move container to workspace number 10
+        # Note: workspaces can have any name you want, not just numbers.
+        # We just use 1-10 as the default.
+    }
 
-# Move focused container to workspace
-bindsym --no-repeat $mod+Shift+1 move container to workspace number 1
-bindsym --no-repeat $mod+Shift+2 move container to workspace number 2
-bindsym --no-repeat $mod+Shift+3 move container to workspace number 3
-bindsym --no-repeat $mod+Shift+4 move container to workspace number 4
-bindsym --no-repeat $mod+Shift+5 move container to workspace number 5
-bindsym --no-repeat $mod+Shift+6 move container to workspace number 6
-bindsym --no-repeat $mod+Shift+7 move container to workspace number 7
-bindsym --no-repeat $mod+Shift+8 move container to workspace number 8
-bindsym --no-repeat $mod+Shift+9 move container to workspace number 9
-bindsym --no-repeat $mod+Shift+0 move container to workspace number 10
-# Note: workspaces can have any name you want, not just numbers.
-# We just use 1-10 as the default.
+    # Switch to adjacent workspace
+    $mod+minus exec \
+        WS=$(swaymsg -tp get_workspaces -p | grep -oP "\d* \(focused\)" | grep -oP "\d*") && \
+        swaymsg -p workspace number $((WS <= 1 ? 1 : WS-1))
+    $mod+equal exec \
+        WS=$(swaymsg -tp get_workspaces -p | grep -oP "\d* \(focused\)" | grep -oP "\d*") && \
+        swaymsg -p workspace number $((WS >= 10 ? 10 : WS+1))
 
-bindsym $mod+Shift+minus exec \
-    WS=$(swaymsg -t get_workspaces -p | grep -oP "\d* \(focused\)" | grep -oP "\d*") && \
-    swaymsg -p move container to workspace number $((WS <= 1 ? 1 : WS-1)) && \
-    swaymsg -p workspace number $((WS <= 1 ? 1 : WS-1))
-bindsym $mod+Shift+equal exec \
-    WS=$(swaymsg -t get_workspaces -p | grep -oP "\d* \(focused\)" | grep -oP "\d*") && \
-    swaymsg -p move container to workspace number $((WS >= 10 ? 10 : WS+1)) && \
-    swaymsg -p workspace number $((WS >= 10 ? 10 : WS+1))
+    # Move focused container to adjacent workspace
+    $mod+Shift+minus exec \
+        WS=$(swaymsg -tp get_workspaces -p | grep -oP "\d* \(focused\)" | grep -oP "\d*") && \
+        swaymsg -p move container to workspace number $((WS <= 1 ? 1 : WS-1)) && \
+        swaymsg -p workspace number $((WS <= 1 ? 1 : WS-1))
+    $mod+Shift+equal exec \
+        WS=$(swaymsg -tp get_workspaces -p | grep -oP "\d* \(focused\)" | grep -oP "\d*") && \
+        swaymsg -p move container to workspace number $((WS >= 10 ? 10 : WS+1)) && \
+        swaymsg -p workspace number $((WS >= 10 ? 10 : WS+1))
 
-## Layout stuff ##
-# Switch the current container between different layout styles
-bindsym $mod+s layout stacking
-bindsym $mod+t layout tabbed
-bindsym $mod+e layout toggle split
+    ## Layout stuff ##
+    --no-repeat {
+        # Switch the current container between different layout styles
+        $mod+s layout stacking
+        $mod+t layout tabbed
+        $mod+e layout toggle split
 
-# Make the current focus fullscreen
-bindsym --no-repeat $mod+f fullscreen
+        # Make the current focus fullscreen
+        $mod+f fullscreen
 
-# Toggle the current focus between tiling and floating mode
-bindsym --no-repeat $mod+Shift+space floating toggle
+        # Toggle the current focus between tiling and floating mode
+        $mod+Shift+space floating toggle
 
-# Swap focus between the tiling area and the floating area
-bindsym --no-repeat $mod+space focus mode_toggle
+        # Swap focus between the tiling area and the floating area
+        $mod+space focus mode_toggle
+    }
 
-# Move focus to the parent container
-bindsym $mod+a focus parent
+    # Move focus to the parent container
+    $mod+a focus parent
 
-## Scratchpad ##
-# Sway has a "scratchpad", which is a bag of holding for windows.
-# You can send windows there and get them back later.
+    ## Scratchpad ##
+    # Sway has a "scratchpad", which is a bag of holding for windows.
+    # You can send windows there and get them back later.
 
-# Show the next scratchpad window or hide the focused scratchpad window
-bindsym --no-repeat $mod+grave scratchpad show
+    # Show the next scratchpad window or hide the focused scratchpad window
+    --no-repeat $mod+grave scratchpad show
 
-# Move the currently focused window to the scratchpad
-bindsym --no-repeat $mod+Shift+grave move scratchpad
+    # Move the currently focused window to the scratchpad
+    --no-repeat $mod+Shift+grave move scratchpad
 
-## Shortcuts ##
-bindsym --no-repeat XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym --no-repeat Shift+XF86AudioMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -2%
-bindsym Shift+XF86AudioLowerVolume exec pactl set-source-volume @DEFAULT_SOURCE@ -2%
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +2%
-bindsym Shift+XF86AudioRaiseVolume exec pactl set-source-volume @DEFAULT_SOURCE@ +2% 
-bindsym --no-repeat XF86AudioPlay exec mpc toggle
-bindsym XF86MonBrightnessDown exec light -U 5
-bindsym XF86MonBrightnessUp exec light -A 5
-bindsym Print exec grim -q100 -l9 -g"$(slurp)"
-bindsym Shift+Print exec grim -t ppm -g"$(slurp -p)" -
-
-## Modes ##
-bindsym --no-repeat $mod+g mode launch
-bindsym --no-repeat $mod+r mode resize
+    ## Shortcuts ##
+    --locked {
+        --no-repeat XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+        --no-repeat Shift+XF86AudioMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+        XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -2%
+        Shift+XF86AudioLowerVolume exec pactl set-source-volume @DEFAULT_SOURCE@ -2%
+        XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +2%
+        Shift+XF86AudioRaiseVolume exec pactl set-source-volume @DEFAULT_SOURCE@ +2% 
+        --no-repeat XF86AudioPlay exec mpc toggle
+        XF86MonBrightnessDown exec light -U 5
+        XF86MonBrightnessUp exec light -A 5
+    }
+    --no-repeat Print exec grim -q100 -l9 -g"$(slurp)"
+    --no-repeat Shift+Print exec grim -t ppm -g"$(slurp -p)" -
+    
+    ## Modes ##
+    --no-repeat $mod+g mode launch
+    --no-repeat $mod+r mode resize
+}
 
 ### Resize mode ###
 mode resize bindsym {
