--- a/portage/make.conf
+++ b/portage/make.conf
@@ -21,6 +21,8 @@ ABI_X86="64"
 LLVM_TARGETS="AMDGPU X86"
 CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3"
 VIDEO_CARDS="amdgpu radeonsi"
+LUA_TARGETS="lua5-4"
+LUA_SINGLE_TARGET="lua5-4"
 L10N="en"
 
 #
