--- a/portage/make.conf
+++ b/portage/make.conf
@@ -23,6 +23,8 @@ CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse ss
 VIDEO_CARDS="amdgpu radeonsi"
 LUA_TARGETS="lua5-4"
 LUA_SINGLE_TARGET="lua5-4"
+PYTHON_TARGETS="python3_10"
+PYTHON_SINGLE_TARGET="python3_10"
 L10N="en"
 
 #
